--- a/index.html
+++ b/index.html
@@ -18,12 +18,23 @@
             <h1><span class="mynuddin">Mynuddin Shikder</span> World</h1>
             <h3>Build Climber and Train Stopper</h3>
             <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
-            <a class= "link-button" target="blank" href="https://www.linkedin.com/in/md-mynuddin-shikder/?  lipi=urn%3Ali%3Apage%3Ad_flagship3_feed%3B8TssGSjOSauIQnr92EMXzA%3D%3D">HIRE ME</a>
+            <a class= "link-button" target="_blank" href="https://www.linkedin.com/in/md-mynuddin-shikder/?  lipi=urn%3Ali%3Apage%3Ad_flagship3_feed%3B8TssGSjOSauIQnr92EMXzA%3D%3D">HIRE ME</a>
         </div>
         <div class="half-width">
             <img src="images/jhankar.png" alt="">
         </div>
         
+   </section>
+   <section class="middle-banner">
+       <div class="half-width">
+           <img src="images/jhankar2.png" alt="">
+       </div>
+       <div class="half-width">
+           <h1>Dream Big</h1>
+           <h3>Become a web developer</h3>
+           <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+           <a class= "link-button" href="">DOWNLOAD RESUME</a>
+       </div>
    </section>
    
 </body>
