--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <div class="half-width">
             <h1>Welcome to </h1>
             <h1><span class="mynuddin">Mynuddin Shikder</span> World</h1>
-            <h3>Build Climber and Train Stopper</h3>
-            <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
+            <h3>Build Website and Good Learner</h3>
+            <p>Hello world!I am a front end developer based out of Bangladesh. I love combining the worlds of logic and creative design to make eye- catching, accessible, and user-friendly websites and applications.  </p>
             <a class= "link-button" target="_blank" href="https://www.linkedin.com/in/md-mynuddin-shikder/?  lipi=urn%3Ali%3Apage%3Ad_flagship3_feed%3B8TssGSjOSauIQnr92EMXzA%3D%3D">HIRE ME</a>
         </div>
         <div class="half-width">
@@ -42,10 +42,10 @@
             <div id="web-dev-exp"class="experience-developer">
                 <h2>Full Stack Web Developer</h2>
                 <h3>2021-Present | Pro Level Developer</h3>
-                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript library called React JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
             </div>
             <div id="baby-web-dev" class="experience-developer">
-                <h2>Baby Web Developer</h2>
+                <h2>Junior Web Developer</h2>
                 <h3>2020-2021 | Programming Hero Learner</h3>
                 <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
             </div>
@@ -53,7 +53,7 @@
 
    </section>
    <footer>
-       <p>© Peter Parker 2021, a Programming Hero initiative.</p>
+       <p>© Mynuddin Shikder 2021, a Web Developer World.</p>
    </footer>
    
 </body>
