--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
             <a class= "link-button" target="_blank" href="https://www.linkedin.com/in/md-mynuddin-shikder/?  lipi=urn%3Ali%3Apage%3Ad_flagship3_feed%3B8TssGSjOSauIQnr92EMXzA%3D%3D">HIRE ME</a>
         </div>
         <div class="half-width">
-            <img src="images/jhankar.png" alt="">
+            <img src="images/mynuddin.png" alt="">
         </div>
         
    </section>
    <section class="middle-banner flexible-container">
        <div class="half-width">
-           <img src="images/jhankar2.png" alt="">
+           <img src="images/mynuddin-bg.png" alt="">
        </div>
        <div class="half-width" >
            <h1>Dream Big</h1>
@@ -53,7 +53,7 @@
 
    </section>
    <footer>
-       <p>© Mynuddin Shikder 2021, a Web Developer World.</p>
+       <p>© Mynuddin Shikder 2021, A Web Developer World.</p>
    </footer>
    
 </body>
